@@ -1,6 +1,7 @@
 * Version 0.9
   - Make =I= / =A= ignore ellipses on heading. Also make them respect =org-special-ctrl-a/e=.
   - Make it possible for =<= and =>= (renamed to evil-org-</>) to move table columns.
+  - Introduce variable =evil-org-retain-visual-state-on-shift=. This variable mimics =dotspacemacs-retain-visual-state= in Spacemacs.
 * Version 0.8
   - Make evil-org-a-greater-org-object (=ar=), evil-org-inner/a-subtree (=iR=, =aR=) text objects linewise. The other text objects remain characterwise.
   - Improvements to =o/O=
